Modifications for java 11